...
            case "Leaderboard":
                Leaderboard()
            case "Profile":
                UserProfile()
            case "Generator":
                QuizGeneratorView()
            case "Store":
                PointPurchaseView()
            default:
                mapView
            }
        }
    }
...
                if !isShowingMenu {
                    Image(systemName: "list.bullet").foregroundColor(.white)
                } else {
                    Image(systemName: "list.bullet").foregroundColor(.black)
                }
            })
        .accessibilityLabel("Menu button")
    }
    
    
}

//struct MainView_Previews: PreviewProvider {
...
