...
                    PointPurchaseItem(pointAmount: 500, icon: "gold-ingots")
                        .onTapGesture {
                            selectedItem = PointOrdered(name: "mega", points: 500, price: "FREE")
                            vm.userDao.getLoggedInUserScore()
                        }
                        .accessibility(addTraits: .isButton)
                        .accessibilityLabel("Mega coins")
                }
            }
            .allowsHitTesting(!popUpVisible)
            
            // When selected item, view it with correct details
            if popUpVisible {
...
                                    .frame(width: 100, height: 30)
                                    .background(Color("Button"))
                                    .cornerRadius(25)
                                    .foregroundColor(.white)
                            }
                            .padding(.bottom, 15)
                            .accessibilityLabel("Points added")
                        }
                    }
                    RoundedRectangle(cornerRadius: 25)
                        .stroke(.black, lineWidth: 3)
                }
                .frame(width: UIScreen.main.bounds.width * 0.9, height: 200)
...
